--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,33 @@
+html, body {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  margin: 0;
+  color: #212529;
+}
+
+body { 
+  background-color: #fafaf8;
+  font-family: 'Open Sans', sans-serif;
+  padding-top: 68px;
+  font-size: 14px;
+}
+
+p {
+  line-height: 1.5;
+}
+
+select {
+  -moz-box-shadow: none !important;
+      -webkit-box-shadow: none !important;
+      box-shadow: none !important;
+      -webkit-border-radius: 0px !important;
+      -moz-border-radius: 0px !important;
+      border-radius: 0px !important;
+      border-collapse: collapse !important;
+    background-image: none !important;
+  }
+
 .navbar {
   background-color: #046b99 !important;
   height: 68px;
@@ -42,6 +72,30 @@
   overflow: hidden;
   overflow-y: scroll; 
 }
+
+.card, .btn {
+  border-radius: 0;
+}
+
+.card-title {
+  margin-bottom: 1rem;
+}
+
+#info-container {
+  padding: 15px 0 0 0;
+}
+
+.site-title {
+  font-size: 20px;
+  margin-bottom: 18px;
+}
+
+#site-pic {
+  height: 100%;
+  object-fit: cover;
+  border-radius: 0;
+}
+
 
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
