--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,10 @@ p {
   line-height: 1.5;
 }
 
+p .message {
+  padding: 10px;
+}
+
 .btn-secondary {
   background-color: #707070;
   border-color: #707070;
